# mapbox-tileset-uploader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  pages.yml  release.yml
docs/: app.js  index.html  styles.css
installer/: mtu-desktop-user.iss
notebooks/: mtu_shared_workflow.ipynb
scripts/: build_windows_exe.ps1  build_windows_installer.ps1  inno_sign_file.ps1  sign_windows_artifacts.ps1
src/mtu/: __init__.py  cli.py  ui.py  ui_main.py  uploader.py
src/mtu/converters/: base.py  flatgeobuf.py  geojson.py  geopackage.py  geoparquet.py  gpx.py  kml.py  shapefile.py  topojson.py
tests/: test_cli.py  test_converters.py  test_uploader.py
