[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtu"
version = "0.4.1"
description = "A CLI tool to upload GeoJSON, TopoJSON, Shapefile, GeoPackage, and other GIS formats to Mapbox as vector tilesets"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Elvis Ayiemba" }
]
keywords = [
    "mapbox",
    "tilesets",
    "geojson",
    "topojson",
    "shapefile",
    "geopackage",
    "kml",
    "geoparquet",
    "vector-tiles",
    "gis",
    "mapping"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mapbox-tilesets>=1.8.0",
    "requests>=2.28.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
# Individual format support
shapefile = ["pyshp>=2.3.0"]
fiona = ["fiona>=1.9.0"]
geoparquet = ["geopandas>=0.14.0", "pyarrow>=14.0.0"]
gpx = ["gpxpy>=1.6.0"]
validation = ["shapely>=2.0.0"]

# Format bundles
all-formats = [
    "pyshp>=2.3.0",
    "fiona>=1.9.0",
    "geopandas>=0.14.0",
    "pyarrow>=14.0.0",
    "gpxpy>=1.6.0",
    "shapely>=2.0.0",
]

# Development
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
    "shapely>=2.0.0",
    "pyinstaller>=6.0.0",
]

windows-build = [
    "pyinstaller>=6.0.0",
    "pyshp>=2.3.0",
]

# All optional dependencies
all = [
    "pyshp>=2.3.0",
    "fiona>=1.9.0",
    "geopandas>=0.14.0",
    "pyarrow>=14.0.0",
    "gpxpy>=1.6.0",
    "shapely>=2.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "types-requests>=2.28.0",
]

[project.scripts]
mtu = "mtu.cli:main"
mtu-ui = "mtu.ui:launch_ui"

[project.urls]
Homepage = "https://github.com/im4sea/mapbox-tileset-uploader"
Documentation = "https://github.com/im4sea/mapbox-tileset-uploader#readme"
Repository = "https://github.com/im4sea/mapbox-tileset-uploader"
Issues = "https://github.com/im4sea/mapbox-tileset-uploader/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mtu"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
disable_error_code = ["arg-type", "list-item"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
